--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,14 @@
 name = "phonelib"
 version = "0.1.0"
 edition = "2021"
+authors = ["Mohamad Zohbie <alzoubi528@gmail.com>"]
+repository = "https://github.com/mohamadzoh/phonelib"
 
 [lib]
 name = "phonelib"
 path = "src/lib.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Add your dependencies here
