Migrate benchmarks to Criterion framework
Replaces manual benchmarking in phone_benchmark.rs with Criterion for more robust and standardized performance measurement. Updates Cargo.toml to add criterion as a dev-dependency and configures the benchmark harness.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,10 @@ path = "src/lib.rs"
 
 [dependencies]
 # Add your dependencies here
+
+[dev-dependencies]
+criterion = "0.5"
+
+[[bench]]
+name = "phone_benchmark"
+harness = false
