--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "phonelib"
-version = "1.0.2"
+version = "1.0.3"
 edition = "2021"
 rust-version = "1.70"
 authors = ["Mohamad Al Zohbie <alzoubi528@gmail.com>"]
@@ -32,6 +32,10 @@ criterion = "0.8.1"
 [[bench]]
 name = "phone_benchmark"
 harness = false
+
+[profile.release]
+lto = true
+codegen-units = 1
 
 [badges]
 maintenance = { status = "actively-developed" }
